# pesquisador_especialista

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  app.py  config.py  main.py  pyproject.toml  results.md
.github/: copilot-instructions.md
agent/: pesquisa.txt  prompt.md  pronpt-original.md  resultado esperado.txt  systemprompt.md  userprompt.md
docs/: REFACTORING.md  STRUCTURE.md  api.md  architecture.md  components.md  models.md  plano-implementacao-apis-gratuitas.md  setup.md
handlers/: research_handler.py
models/: __init__.py  article.py  patent.py
server/: app.py  config.py
server/handlers/: research_handler.py
server/models/: __init__.py  article.py  patent.py
server/prompts/: systemprompt.md
server/services/: __init__.py  ai_service.py  db.py  report_service.py  research_service.py  source_collector.py  source_service.py
server/tests/: conftest.py  test_academic.py  test_app_integration.py  test_fetcher.py  test_ieee.py  test_patents.py  test_prompt_enrichment.py  test_serpapi.py  test_static_assets.py  test_wipo.py
server/utils/: __init__.py  fetcher.py  http_client.py
services/: __init__.py  ai_service.py  report_service.py  research_service.py  source_collector.py  source_service.py
static/: index.html
tests/: conftest.py  test_academic.py  test_app_integration.py  test_fetcher.py  test_ieee.py  test_patents.py  test_prompt_enrichment.py  test_serpapi.py  test_wipo.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  helpers.ts  main.tsx  theme.ts  (+1 more)
utils/: fetcher.py  http_client.py
(+20 files in other folders)
