[project]
name = "pesquisador-especialista"
version = "0.1.0"
description = "Plataforma de Pesquisa com IA para revisões técnicas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
testpaths = ["server/tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
